<resources>
    <string name="app_name">MedManager</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="title_activity_drawer"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="clear_alarm">Clear Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="buttonAdjMed">Adjust Med</string>
    <string name="buttonAdjSched">Adjust Schedule</string>
    <string name="adjust">Adjust</string>
    <string name="med_list">Med List</string>
    <string name="my_meds">My Meds</string>

    <string name="dosage">Dosage</string>
    <string name="frequency">Frequency</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="add_new_med">Add New Med</string>
    <string name="snooze_alarm">Snooze Alarm</string>
    <string name="adding_a_new_medication">Adding a new medication</string>
    <string name="medication_dosage">Medication Dosage</string>
    <string name="medication_name">Medication Name</string>
    <string name="alarm_notification">Alarm Notification</string>
    <string name="database">Database</string>
    <string name="delete_med">Delete Med</string>
    <string name="create_sched">Create</string>
    <string name="update_sched">Update</string>
    <string name="create_med">Create a new medication</string>
    <string name="update_med">Update a current medication</string>
    <string name="add_med">Add Med</string>
    <string name="adjust_med">Adjust Med</string>


</resources>
