<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cnm.bootcamp.david.medmanager.activities.MedListActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/list_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="514dp"
        android:layout_height="60dp"
        android:text="Medication Adjustment"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="1dp" />


    <ListView
        android:id="@+id/queryList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:listSelector="@android:color/darker_gray"


        android:choiceMode="singleChoice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteMed"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/databaseButton"
        android:layout_width="116dp"
        android:layout_height="63dp"
        android:layout_marginBottom="139dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="16dp"
        android:text="@string/database"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/buttonAddNew"
        android:layout_width="134dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="5dp"
        android:text="@string/add_med"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/buttonDeleteMed"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginBottom="139dp"
        android:layout_marginStart="3dp"
        android:text="@string/delete_med"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/buttonAddNew"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="1.0" />




</android.support.constraint.ConstraintLayout>
